force-app/main/default/objects/Component__mdt/Component__mdt.object-meta.xml
<CustomObject>
    <description>Component Definition</description>
    <label>Component</label>
    <pluralLabel>Components</pluralLabel>
</CustomObject>