force-app/main/default/objects/Component__mdt/fields/Targets__c.field-meta.xml
<CustomField>
    <fullName>Targets__c</fullName>
    <defaultValue>&quot;Lightning Experience&quot;</defaultValue>
    <description>comma separated list places component can be used</description>
    <inlineHelpText
  >comma separated list places component can be used</inlineHelpText>
    <label>Targets</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>