force-app/main/default/objects/Component__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Reliant</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>Mixin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>